Fixed horizontal overflow

--- a/src/styles/Countries.module.css
+++ b/src/styles/Countries.module.css
@@ -1,6 +1,6 @@
 .countries {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 50%);
   list-style-type: none;
   padding: 0;
 }
